expected/main/gens/primInitPad-neg-32.err
ERROR: "actual/main/gens/primInitPad-neg-32.lc", line 5
external ip3  {primInitPad 3}   :: Init (Pad 3 SW)
         ^
Generator primInitPad requires 2 arguments

ERROR: "actual/main/gens/primInitPad-neg-32.lc", line 6
external ip3W {primInitPad 3 W} :: Init (Pad 3 SW)
                             ^
The type constructor "W" is not in scope

ERROR: "actual/main/gens/primInitPad-neg-32.lc", line 7
external ipWW {primInitPad W W} :: Init (Pad 3 SW)
                           ^
The type constructor "W" is not in scope

ERROR: "actual/main/gens/primInitPad-neg-32.lc", line 4
entrypoint ip3, ip3W, ipWW
^
"ip3" is not in scope

ERROR: "actual/main/gens/primInitPad-neg-32.lc", line 4
entrypoint ip3, ip3W, ipWW
^
"ip3W" is not in scope

ERROR: "actual/main/gens/primInitPad-neg-32.lc", line 4
entrypoint ip3, ip3W, ipWW
^
"ipWW" is not in scope

ERROR: Aborting after 6 previously reported errors

